deployment/production/www.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www-ingress
  namespace: www
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: www-tls
    hosts:
    - www.leflair.vn
    - leflair.vn
  - secretName: ww2-tls
    hosts:
    - ww2.leflair.vn
  rules:
  - host: www.leflair.vn
    http:
      paths:
      - path: /api
        backend:
          serviceName: www-api
          servicePort: 80
      - path: /
        backend:
          serviceName: www-react
          servicePort: 80
  - host: ww2.leflair.vn
    http:
      paths:
      - path: /api
        backend:
          serviceName: global-cache
          servicePort: 80
      - path: /
        backend:
          serviceName: www-react
          servicePort: 80
  - host: leflair.vn
    http:
      paths:
      - path: /
        backend:
          serviceName: www-react
          servicePort: 80
  - host: leflair.com
    http:
      paths:
      - path: /
        backend:
          serviceName: www-react
          servicePort: 80
